# proj

./: .gitignore  Cargo.toml  deny.toml  diesel.toml
.github/workflows/: ci.yml
migrations/2023-04-06-004351_create_revisions/: down.sql  up.sql
migrations/2023-04-06-154707_create_input_files/: down.sql  up.sql
migrations/2023-04-06-211534_create_revision_files/: down.sql  up.sql
migrations/2023-04-07-215520_create_routes/: down.sql  up.sql
migrations/2023-04-08-152057_create_pages/: down.sql  up.sql
resources/site1/content/: article1.md
resources/site1/static/: _headers  index.html
resources/site1/templates/: main.hbs
src/: asset.rs  build.rs  cleanup.rs  cmd.rs  content.rs  delete.rs  main.rs  models.rs  publish.rs  schema.rs  sqlite_mapping.rs
src/models/: input_file.rs  page.rs  revision.rs  revision_file.rs  route.rs
