[package]
name = "bewilder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
blake3 = "1.3.3"
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive", "env"] }
diesel = { version = "2.0.3", features = ["chrono", "returning_clauses_for_sqlite_3_35", "r2d2", "sqlite"] }
ignore = "0.4.19"
itertools = "0.10.5"
memmap2 = "0.5.8"
pulldown-cmark = { version = "0.9.2", default-features = false }
r2d2 = "0.8.10"
rayon = "1.6.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
