[package]
name = "proj"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.68"
base64ct = { version = "1.6.0", features = ["std"] }
blake3 = "1.3.3"
chrono = { version = "0.4.24", default-features = false }
clap = { version = "4.5.4", features = ["derive", "env"] }
diesel = { version = "2.0.3", features = ["chrono", "returning_clauses_for_sqlite_3_35", "r2d2", "sqlite"] }
diesel_migrations = "2.0.0"
handlebars = "5.1.0"
ignore = "0.4.19"
itertools = "0.12.0"
lightningcss = "1.0.0-alpha.40"
lol_html = "1.2.0"
memmap2 = "0.9.0"
pulldown-cmark = { version = "0.9.2", default-features = false }
r2d2 = "0.8.10"
rayon = "1.6.1"
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.95"
sha2 = "0.10.6"
thiserror = "1.0.40"
toml_edit = "0.21.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
url = "2.3.1"
